Avoid setting document color attributes when it is a frameset

Color attributes are not valid for frameset.
Spec: https://www.w3.org/TR/html401/present/frames.html

BUG=809059

Change-Id: I14d9aed4c077c149b7ce19081a9d4dd1aa2ac81e
Reviewed-on: https://chromium-review.googlesource.com/934009
Reviewed-by: Kent Tamura <tkent@chromium.org>
Commit-Queue: Ramya Vadlamudi <ramya.v@samsung.com>
Cr-Commit-Position: refs/heads/master@{#538747}