third_party/WebKit/Source/core/dom/Document.cpp
@@ -6935,7 +6935,8 @@ const AtomicString& Document::bgColor() const {
 }
 
 void Document::setBgColor(const AtomicString& value) {
-  SetBodyAttribute(bgcolorAttr, value);
+  if (!IsFrameSet())
+    SetBodyAttribute(bgcolorAttr, value);
 }
 
 const AtomicString& Document::fgColor() const {
@@ -6943,7 +6944,8 @@ const AtomicString& Document::fgColor() const {
 }
 
 void Document::setFgColor(const AtomicString& value) {
-  SetBodyAttribute(textAttr, value);
+  if (!IsFrameSet())
+    SetBodyAttribute(textAttr, value);
 }
 
 const AtomicString& Document::alinkColor() const {
@@ -6951,7 +6953,8 @@ const AtomicString& Document::alinkColor() const {
 }
 
 void Document::setAlinkColor(const AtomicString& value) {
-  SetBodyAttribute(alinkAttr, value);
+  if (!IsFrameSet())
+    SetBodyAttribute(alinkAttr, value);
 }
 
 const AtomicString& Document::linkColor() const {
@@ -6959,7 +6962,8 @@ const AtomicString& Document::linkColor() const {
 }
 
 void Document::setLinkColor(const AtomicString& value) {
-  SetBodyAttribute(linkAttr, value);
+  if (!IsFrameSet())
+    SetBodyAttribute(linkAttr, value);
 }
 
 const AtomicString& Document::vlinkColor() const {
@@ -6967,7 +6971,8 @@ const AtomicString& Document::vlinkColor() const {
 }
 
 void Document::setVlinkColor(const AtomicString& value) {
-  SetBodyAttribute(vlinkAttr, value);
+  if (!IsFrameSet())
+    SetBodyAttribute(vlinkAttr, value);
 }
 
 template <unsigned type>
